chore(tests): add ts-jest

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     /* Language and Environment */
     "target": "es2016",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
-    "types": ["node"],
+    "types": ["jest", "node"],
 
     /* Modules */
     "module": "commonjs",                                /* Specify what module code is generated. */
