--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "Francois Picalausa <francois.picalausa@houzz.com>",
   "license": "UNLICENSED",
   "scripts": {
-    "build": "ncc build src/index.ts"
+    "build": "ncc build src/index.ts",
+    "test": "jest"
   },
   "dependencies": {
     "@actions/core": "^1.6.0",
@@ -15,8 +16,11 @@
     "date-fns": "^2.28.0"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.0",
     "@types/node": "^17.0.18",
     "@vercel/ncc": "^0.33.0",
+    "jest": "^27.5.1",
+    "ts-jest": "^27.1.3",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
   }
