--- a/action.yml
+++ b/action.yml
@@ -5,9 +5,30 @@ runs:
   using: "node16"
   main: "dist/index.js"
 inputs:
-  github_token:
-    description: "The GITHUB_TOKEN secret"
+  github-token:
+    description: "PAT for GitHub API authentication."
     required: true
-  dry_run:
-    description: "When set to true, no branch will be removed"
+  dry-run:
+    description: "Flag that prevents this action from doing any modification to the repository."
     required: false
+  exempt-organization:
+    description: "Name of a Github organization. Branches for which the latest commiter belongs to this organization will be exempt from cleanup."
+    required: false
+  exempt-branches-regex:
+    description: "Regular expression defining branches name that are exempt from cleanup. Defaults to `^(main|master)$`."
+    required: false
+  exempt-authors-regex:
+    description: "Regular expression defining authors who are exempt from cleanup. By default, no author is exempted."
+    required: false
+  stale-branch-message:
+    description: "Template for commit comments notifying the author that their branch will be removed."
+    required: false
+  days-before-branch-stale:
+    description: "Number of days since the last commit before a branch is considered stale. Once stale, this action will leave a comment on the last commit, marking the branch as stale."
+    required: false
+  days-before-branch-delete:
+    description: "Number of days before a stale branch is removed."
+    required: false
+  operations-per-run:
+    description: "Maximum number of stale branches to look at in any run of this action."
+    required: false  
