--- a/action.yml
+++ b/action.yml
@@ -8,7 +8,7 @@ inputs:
   github-token:
     description: "PAT for GitHub API authentication."
     required: true
-    default: "${{ secrets.GITHUB_TOKEN }}"
+    default: ${{ github.token }}
   dry-run:
     description: "Flag that prevents this action from doing any modification to the repository."
     required: false
