--- a/action.yml
+++ b/action.yml
@@ -7,7 +7,7 @@ runs:
 inputs:
   github-token:
     description: "PAT for GitHub API authentication."
-    required: true
+    required: false
     default: ${{ github.token }}
   dry-run:
     description: "Flag that prevents this action from doing any modification to the repository."
