chore: fix build

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "remove-stale-branches",
   "private": true,
-  "version": "1.4.1",
+  "version": "1.5.1",
   "description": "Cleanup stale branches from a repository",
-  "main": "dist/index.js",
+  "main": "src/index.ts",
   "author": "Francois Picalausa <francois.picalausa@houzz.com>",
   "license": "UNLICENSED",
   "scripts": {
