--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Cleanup stale branches from a repository",
   "main": "src/index.ts",
   "author": "Francois Picalausa <fpicalausa@gmail.com>",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "build": "ncc build src/index.ts",
     "test": "jest",
