--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "build": "ncc build src/index.ts",
     "test": "jest",
-    "prettier:write": "prettier --write 'src/*.ts'"
+    "prettier:write": "prettier --write \"src/*.ts\"",
+    "cli": "ts-node src/cli.ts"
   },
   "dependencies": {
     "@actions/core": "^1.10.1",
