--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@actions/core": "^1.11.1",
     "@actions/github": "^6.0.0",
+    "@octokit/core": "^5.2.1",
     "date-fns": "^4.1.0"
   },
   "devDependencies": {
